--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+  min-width: 660px;
+}
+
 .App {
   text-align: center;
 }
@@ -8,6 +15,7 @@
 }
 
 .black-nav {
+  min-width: 660px;
   width: 100%;
   display: flex;
   color: white;
