--- a/src/css/users.css
+++ b/src/css/users.css
@@ -4,3 +4,109 @@
   width: 70%;
   height: 100%;
 }
+
+.sub-card:hover {
+  transform: scale(1.05);
+}
+
+.sub-card {
+  transition: 0.5s;
+  position: relative;
+  box-shadow: 4px 2px 10px lightgray;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  height: 300px;
+  z-index: 1;
+}
+
+.card-wrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 0px 30px;
+  margin-top: 20px;
+}
+
+.sub-card-item {
+  transition: 0.5s;
+  position: relative;
+  box-shadow: 4px 2px 10px lightgray;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+  width: 70%;
+  height: 55px;
+  z-index: 1;
+}
+
+.sub-card-item-delete {
+  transition: 0.5s;
+  position: relative;
+  width: 70px;
+  height: 55px;
+  box-shadow: 4px 2px 10px lightgray;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+  z-index: 3;
+
+  text-align: center;
+}
+
+.sub-card-item-delete svg {
+  margin-top: 13px;
+  width: 25px;
+  height: 25px;
+}
+
+.sub-card-item-delete:hover {
+  transform: scale(1.05);
+}
+
+.menu-item {
+  padding: 20px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  border: 1px solid lightgray;
+}
+
+.menu-item li {
+  width: 25%;
+}
+
+.menu-item button {
+  width: 100%;
+}
+
+.text-wrap-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  z-index: 2;
+  height: 100%;
+  width: 100%;
+}
+
+.text-wrap-item span {
+  width: 100%;
+}
+
+.sub-card-item:hover {
+  transform: scale(1.05);
+}
+
+.text-wrap {
+  text-align: left;
+  position: absolute;
+  bottom: 0;
+  padding: 25px;
+  z-index: 2;
+}
