--- a/src/css/users.css
+++ b/src/css/users.css
@@ -83,6 +83,7 @@
 }
 
 .text-wrap-item {
+  padding: 10px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -95,7 +96,10 @@
   width: 100%;
 }
 
-.text-wrap-item span {
+.text-wrap-item input {
+  margin-top: 16px;
+  margin-left: 10px;
+  margin-right: 10px;
   width: 100%;
 }
 
